--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 							<div class="inner">
 								<h1>AFASSI Mohamed</h1>
 								<p>Embedded Cybersecurity and Embedded AI enthousiast<br />
-								Student in Embedded Cyber at the university of southern Brittany FRANCE</p>
+								Student in Embedded Cyber at the university of southern Brittany, FRANCE</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#about">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#experience">Experience</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -44,26 +44,36 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
+							<article id="experience">
+								<h2 class="major">Experience</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>I had the chance to have many experiences in IT companies.</p>
+								<p>&nbsp&nbsp- SIREN TEST (Engineer & designer of electronic test boards) :</p>
+								<p>FPGA Hardware conception & design </p>
+								<p>Software / Firmware Dev & Debug </p>
+								<p>TERADYNE Dev</p>
+								<p>In-circuit testing</p>
+								<p>Functional JTAG Tests</p>
+
+								</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p></p>
+								<p></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>My name is AFASSI Mohamed, 21 years old polyglot and Embedded Cyber engineer with ongoing master's degree</p>
+								<p>I live and study in France, but I'm originally from the silver city of Tiznit in MOROCCO. I'm very interested in everything ralted to the embedded field.</p>
+								<p>My true passion lies in designing both embedded systems hardware and firmware. One of my goals is developing a big project with both FPGA and AI technologies.</p>
+								<p>The key skills in my possession are, Xilinx FPGAs, low-level firmware in embedded C or C++, Microblaze and RiscV softcores, Signal processing, custom FPGA IPs Designing, Communication Protocols</p>			
 							</article>
 
 						<!-- Contact -->
