--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>I had the chance to have many experiences in IT companies.</p>
 								<p>&nbsp&nbsp- SIREN TEST (Engineer & designer of electronic test boards) :</p>
-								<p>FPGA Hardware conception & design </p>
-								<p>Software / Firmware Dev & Debug </p>
-								<p>TERADYNE Dev</p>
-								<p>In-circuit testing</p>
-								<p>Functional JTAG Tests</p>
-
-								</p>
+								<ul>
+									<li>FPGA Hardware conception & design </li>
+									<li>Software / Firmware Dev & Debug </li>
+									<li>TERADYNE Dev</li>
+									<li>In-circuit testing</li>
+									<li>Functional JTAG Tests</li>
+								</ul>
 							</article>
 
 						<!-- Work -->
