--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="experience">
 								<h2 class="major">Experience</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>I had the chance to have many experiences in IT companies.</p>
+								<p>To exceel and gain experience on the domain, I had the chance to have many experiences through diverse projects:</p>
 								<p>SIREN TEST (FPGA Hardware/Firmware Developer) :
 								<ul>
 									<li>FPGA Hardware conception & design </li>
@@ -57,14 +57,35 @@
 									<li>Functional JTAG Tests</li>
 								</ul>
 								</p>
-								<p>&nbsp&nbsp- SIREN TEST (Engineer & designer of electronic test boards) :</p>
-								<ul>
-									<li>FPGA Hardware conception & design </li>
-									<li>Software / Firmware Dev & Debug </li>
-									<li>TERADYNE Dev</li>
-									<li>In-circuit testing</li>
-									<li>Functional JTAG Tests</li>
-								</ul>
+								<p>Christiaan Huygens Research Center(GNU Radio Block developer) :
+									<ul>
+										<li>Design and development of blocks on GNU RADIO for complex OFDM transmissions</li>
+										<li>Creation of a transmission block that contains a CDMA signal that allows frame synchronization</li>
+										<li>Creation of a correlator block in reception for the analysis of signals and detection of the beginning of frames</li>
+									</ul>
+								</p>
+								<p>St. Joseph Lasalle Private Catholic High School (Developer of a robot assistant (pepper robot)) :
+									<ul>
+										<li>Developpement of an Android application able to communicate with an external server</li>
+										<li>Development of functions related to reade/-writers on NFC cards by an Android application</li>
+										<li>Developpement of a server side application that returns information in response to requests</li>
+									</ul>
+								</p>
+								<p>NKE Watteco (Computer & Network Technician) :
+									<ul>
+										<li>Implementation and configuration of a virtual machine for the supervision of the computer park</li>
+										<li>Study the different existing solutions and choose the best one that meets the constraints set by the company</li>
+										<li>Supervision of local devices and intervention in case of malfunction</li>
+										<li>Configuration of peripheral of the computer park to integrate the functionalities of supervision</li>
+									</ul>
+								</p>
+								<p>Technical Scientific high school (ARDUINO Developer) :
+									<ul>
+										<li>Manufacturing of a mirror based on a computer screen</li>
+										<li>Development of a software dedicated to interact with the user through voice recognition</li>
+										<li>Creation and configuration of different APIs that will be able to communicate and display the information requested by the user</li>
+									</ul>
+								</p>
 							</article>
 
 						<!-- Work -->
