--- a/index.html
+++ b/index.html
@@ -92,8 +92,32 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
+								<p>The best way to learn is practacing, here's some of projects : </p>
+								<p>Xilinx UART Ip :</p>
+									<ul>
+										<li>Plug and run UART IP</li>
+										<li>AXI Compatible</li>
+										<li>Capacity to run up to 20Mhz</li>
+										<li>Modular speed,parity and stop-bits</li>
+										<li>GUI possession</li>
+									</ul>
+								</p>
+								<p>RS232 Protocol Reader :</p>
+								<ul>
+									<li>Written in C++</li>
+									<li>Very light</li>
+									<li>RS232 Decoding</li>
+									<li>Modular speed,parity and stop-bits</li>
+									<li>Input saving into files</li>
+								</ul>
+								</p>
+								<p>FPGA Flash QSPI Reader :</p>
+								<ul>
+									<li>QSPI type detector</li>
+									<li>possesses Vitis platform initializer</li>
+								</ul>
+								</p>
+								<p>Note : All my projects are opensource and can be found in my Github Repositories</p>
 							</article>
 
 						<!-- About -->
@@ -381,10 +405,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</div>
 
-				<!-- Footer 
+				 Footer 
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>-->
+						<p class="copyright">&copy; All rights reserved</p>
+					</footer>
 
 			</div>
 
