--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</div>
 
-				 Footer 
+				 <!--Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; All rights reserved</p>
 					</footer>
