--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>AFASSI Mohamed</h1>
-								<p>Embedded Cybersecurity and Embedded AI enthousiast<br />
+								<p>Embedded Cyber and Embedded AI enthousiast<br />
+								R&D Cyber CTI Engineer @ NOKIA <br />
 								Student in Embedded Cyber at the university of southern Brittany, FRANCE</p>
 							</div>
 						</div>
